--- a/css/index.css
+++ b/css/index.css
@@ -2,10 +2,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+  
+
    
 }
 body{
-    overflow-x: hidden;
+    overflow-x: hidden ;
     font-family: 'Times New Roman', Times, serif;
     
 }
@@ -17,14 +19,25 @@ body{
     color: white; 
 }
 
-/* #map {
+#map {
         position: absolute;
-        top: 0PX;
+        top: 60PX;
         left: 0;
         height: 100vh;
         width: 100vw;
         z-index: 0;
-} */
+}
+.file-input-container label {
+    display: block;
+    cursor: pointer;
+    padding: 8px;
+    margin-top: -9px;
+    top: 19px;
+    border: 2px dashed #ccc;
+    text-align: center;
+    border-radius: 5px;
+    transition: border-color 0.3s ease;
+}
     
 
 
@@ -91,8 +104,10 @@ body{
     top: 0;
     left: 0;
 }
-.custom-close-btn{
+.custom-close-btn {
     color: red !important;
+    margin-left: 200px;
+    margin-top: 0px;
 }
 .from{
     height: 100px;
@@ -157,10 +172,10 @@ li{
     position: absolute;
     width: 220%;
     height: 100%;
-    background-color:green;
-    color:white;
-    top:10px;
-    left:83vw;
+    background-color: #0077DA;
+    color: white;
+    top: 4px;
+    /* left: 200%; */
     z-index: 1;
     border-radius: 20px;
     cursor: pointer;
@@ -197,14 +212,13 @@ li{
     right: 10px;
     transform: translateY(-50%);
 }
-.menu-bar img{
+.menu-bar img {
     z-index: 999;
     position: absolute;
-    top: 1%;
+    top: 2%;
     left: 5%;
     border: none;
     background-color: transparent;
- 
 }
 
 
@@ -258,18 +272,27 @@ li{
         position: absolute;
         z-index: 9999;
         top: 0px;
-        left: -3%;
+        left: 2%;
         color: black;
         /* width: 4dvw; */
         height: 7dvh;
     }
+    .leaflet-top {
+       top: 71% !important;
+    }
+    .svg-inline--fa {
+        display: var(--fa-display, inline-block);
+        height: 1em;
+        overflow: visible;
+        vertical-align: 0.875em;
+    }
     .menu-bar img {
         z-index: 999;
         position: absolute;
-        top: 1.250%;
-        left: 11%;
-        height: 30px;
-        width: 30px;
+        top: 7%;
+        left: 7%;
+        height: 20px;
+        width: 20px;
         border: none;
         background-color: transparent;
     }
@@ -294,40 +317,45 @@ li{
         box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         transition: transform 0.3s, background-color 0.3s;
     }
-    .toggle-text-right {
+    .toggle-text-left {
         position: absolute;
-        top: 48%;
-        left: 41%;
-        font-size: 13px;
-        right: 10px;
+        z-index: 1;
+        top: 50%;
+        font-size: 12px;
+        left: 10px;
+        color: black;
         transform: translateY(-50%);
     }
     .toggle-label {
         display: block;
         position: absolute;
-        width: 171%;
+        /* width: 289%; */
         height: 100%;
-        background-color: green;
+        background-color: #0077DA;
         color: white;
-        top: 6px;
-        left: 84%;
+        top: -1px;
+        left: -5%;
         z-index: 1;
         border-radius: 20px;
         cursor: pointer;
         transition: background-color 0.3s;
     }
+
+
+
     #navbarDropdown {
         font: 1rem;
-        color: rgb(0, 255, 251);
+        color: #0077DA;
         text-transform: uppercase;
         text-shadow: #fff;
-        font-size: 13px;
-        margin-right: 29px;
+        font-size: 12px;
+        margin-top: 33px;
+        margin-right: 133px;
     }
     .leaflet-touch .leaflet-control-layers, .leaflet-touch .leaflet-bar {
         /* border: 2px solid rgba(0, 0, 0, 0.2); */
         background-clip: padding-box;
-        border: 2px solid green !important;
+        border: 2px solid #0077DA !important;
     }
     .h5, h5 {
         font-size: 16px;
@@ -346,10 +374,10 @@ li{
         font-size: 1rem !important;
         margin-top: -17px !important;
     }
-    .btn-close .custom-close-btn{
+    .btn-close {
+        margin-top: -13px !important;
         font-size: 10px !important;
-        margin-top: -15px !important;
-        
+        margin-left: 172px;
     }
     .btn-close {
         margin-top: -13px !important;
@@ -359,29 +387,34 @@ li{
         margin-bottom: -7px;
         line-height: var(--bs-modal-title-line-height);
     }
-    .modal-body {
-        position: relative;
-        flex: 1 1 auto;
-        padding: 6px;
-        top: -12px;
-
-        font-family: sans-serif;
-        font-size: 14px;
-        /* padding: var(--bs-modal-padding); */
-    }
+   
     .fw-bold {
         /* font-weight: 700 !important; */
         font-size: 10px !important;
     }
-     .btn-outline-success{
+    .btn-outline-success {
         font-size: 10px !important;
+        background: #0077da !important;
+        /* background: aliceblue; */
         font-family: sans-serif;
-       
+        color: white !important;
     }
+    
+    .toggle-text-right {
+        position: absolute;
+        top: 50%;
+        font-size: 12px !important;
+        right: 10px;
+        transform: translateY(-50%);
+    }
+    
     .form-control {
         display: block;
-        width: 100%;
-        font-size: 10px !important;
+        width: 88% !important;
+        height: 34px !important;
+        margin-left: 20px;
+        font-size: 14px;
+        padding: 8px;
         font-weight: 400;
         line-height: 1.5;
         color: var(--bs-body-color);
@@ -394,29 +427,144 @@ li{
         border-radius: var(--bs-border-radius);
         transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
     }
-    .modal-content {
+    
+    .form-control option {
+        padding: 2px; 
+        line-height: 1.2 !important;
+      
+        font-size: 14px !important;
+       
+    }
+
+    .form-control {
+    max-height: 200px; 
+    overflow-y: auto; 
+    scrollbar-width: thin; 
+    scrollbar-color: #888 #f1f1f1; 
+}
+
+.form-control option {
+    padding: 2px 8px; 
+    line-height: 1.2 !important; 
+    font-size: 14px !important;
+}
+
+/* Custom scrollbar styles for WebKit browsers (Chrome, Safari) */
+.form-control::-webkit-scrollbar {
+    width: 8px;
+}
+
+.form-control::-webkit-scrollbar-thumb {
+    background-color: #888; 
+    border-radius: 10px; 
+}
+
+.form-control::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+
+    #input1{
+        height: 50%;
+    }
+   
+    #map {
+        position: absolute;
+        top: 10vh;
+        left: 0;
+        height: 87vh;
+        width: 94vw;
+        z-index: 0;
+        border-radius: 10px;
+        padding: 10px;
+        margin: 10px;
+        transition: height 0.3s, top 0.3s;
+    }
+    
+
+    
+
+      .modal-content {
+        height: auto;
+        max-height: 700px !important;
+    }
+    .modal-dialog.draggable-modal {
+        position: fixed;
+        top: 2px;
+        left: 9px;
+        border-radius: 15px;
+        margin-left: 0;
+        margin-right: auto;
+        width: 76%;
+        /* max-width: 400px; */
+        height: 140vh;
+        /* overflow-y: auto; */
+    }
+    .profile {
+        position: absolute;
+        z-index: 1;
+        top: -3%;
+        right: -37%;
+    }
+    .file-input-container label {
+        display: block;
+        cursor: pointer;
+        padding: 10px;
+        border: 2px dashed #ccc;
+        text-align: center;
+        font-size: 11px;
+        border-radius: 5px;
+        transition: border-color 0.3s ease;
+    }
+    form {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .form-group {
+        display: flex;
+        align-items: center;
+        margin-bottom: 10px;
+    }
+    
+    .form-group label {
+        width: 84px;
+        margin-right: 10px;
+        text-align: left;
+        font-size: 15px;
+    }
+    
+    .form-control {
+        flex: 1;
+    }
+    .upload-container {
+        width: 276px !important;
+    
+        padding: 20px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+    }
+
+      .modal-content {
         position: relative;
         display: flex;
         flex-direction: column;
-        width: 99%;
-        height: 350px !important;
+        width: 100%;
         color: var(--bs-modal-color);
         pointer-events: auto;
-        background-color: var(--bs-modal-bg);
+        background-color: rgba(194, 223, 233, 0.5) !important;
         background-clip: padding-box;
         border: var(--bs-modal-border-width) solid var(--bs-modal-border-color);
         border-radius: var(--bs-modal-border-radius);
         outline: 0;
     }
-    .form-control option {
-        padding: 2px; 
-        line-height: 1.2 !important; 
-        font-size: 14px !important; 
+    .modal-body {
+        padding: 5px !important;
     }
-    #input1{
-        height: 50%;
-    }
+    
+   
 }
+
+
 
 
 
